# rancas_prueba

./: excel_to_sqlite.py  informacioncie10.xlsx  main.py  pyproject.toml
.github/workflows/: build.yml
database/: cie10.db  db_manager.py
modules/: antropometria.py  calculadoras.py  cie10.py  ginecologia.py
utils/: constants.py  validators.py
